deploy: 31303ebf5c4675bcb5d60fe5e623ee0284410ba0

--- a/t07-events.html
+++ b/t07-events.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7327752/css/fonts.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body class="" id="midd-pagetop">
     <nav aria-labelledby="midd-skip-link">
@@ -860,20 +860,6 @@
                         <td>6:00 PM</td>
                         <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
                         <td> McCone Irvine Auditorium <br>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Jul 25, 2018</td>
-                        <td>6:00 PM</td>
-                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
-                        <td> McCone Irvine Auditorium <br>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Jul 25, 2018</td>
-                        <td>6:00 PM</td>
-                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
-                        <td> McCone Irvine Auditorium <br>
                           <small class="f2 color-gray">Open to the Public</small>
                         </td>
                       </tr>
@@ -898,6 +884,21 @@
                         <td>6:00 PM</td>
                         <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
                         <td> McCone Irvine Auditorium <br>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Jul 25, 2018</td>
+                        <td>6:00 PM</td>
+                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
+                        <td> McCone Irvine Auditorium <br>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Jul 25, 2018</td>
+                        <td>6:00 PM</td>
+                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
+                        <td> McCone Irvine Auditorium <br>
+                          <small class="f2 color-gray">Open to the Public</small>
                         </td>
                       </tr>
                       <tr>
@@ -947,43 +948,6 @@
                         <td>6:00 PM</td>
                         <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
                         <td> McCone Irvine Auditorium <br>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Jul 25, 2018</td>
-                        <td>6:00 PM</td>
-                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
-                        <td> McCone Irvine Auditorium <br>
-                          <small class="f2 color-gray">Open to the Public</small>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Jul 25, 2018</td>
-                        <td>6:00 PM</td>
-                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
-                        <td> McCone Irvine Auditorium <br>
-                          <small class="f2 color-gray">Open to the Public</small>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Jul 25, 2018</td>
-                        <td>6:00 PM</td>
-                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
-                        <td> McCone Irvine Auditorium <br>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Jul 25, 2018</td>
-                        <td>6:00 PM</td>
-                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
-                        <td> McCone Irvine Auditorium <br>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Jul 25, 2018</td>
-                        <td>6:00 PM</td>
-                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
-                        <td> McCone Irvine Auditorium <br>
                           <small class="f2 color-gray">Open to the Public</small>
                         </td>
                       </tr>
@@ -1000,6 +964,42 @@
                         <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
                         <td> McCone Irvine Auditorium <br>
                           <small class="f2 color-gray">Open to the Public</small>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Jul 25, 2018</td>
+                        <td>6:00 PM</td>
+                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
+                        <td> McCone Irvine Auditorium <br>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Jul 25, 2018</td>
+                        <td>6:00 PM</td>
+                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
+                        <td> McCone Irvine Auditorium <br>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Jul 25, 2018</td>
+                        <td>6:00 PM</td>
+                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
+                        <td> McCone Irvine Auditorium <br>
+                          <small class="f2 color-gray">Open to the Public</small>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Jul 25, 2018</td>
+                        <td>6:00 PM</td>
+                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
+                        <td> McCone Irvine Auditorium <br>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Jul 25, 2018</td>
+                        <td>6:00 PM</td>
+                        <td><a href="" class="h4">Building a Sustainable Career in Social Impact – Breaking into the Field</a></td>
+                        <td> McCone Irvine Auditorium <br>
                         </td>
                       </tr>
                       <tr>
