--- a/c8-basic-content.html
+++ b/c8-basic-content.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7327752/css/fonts.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body class="" id="midd-pagetop">
     <nav aria-labelledby="midd-skip-link">
@@ -1089,10 +1089,10 @@
                         <div class="col-sm-6 col-md-4 mb-5">
                           <figure class="portrait-video js-video" data-video='<iframe src="https://player.vimeo.com/video/398243397?autoplay=1" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay"></iframe>'>
                             <div class="portrait-video__content js-video-content">
-                              <a href="https://player.vimeo.com/video/398243397" class="js-video-link portrait-video__link" role="button" aria-label="Play video" aria-describedby="midd-video-label-269">
+                              <a href="https://player.vimeo.com/video/398243397" class="js-video-link portrait-video__link" role="button" aria-label="Play video" aria-describedby="midd-video-label-940">
                                 <img src="https://placehold.it/306x554" srcset="https://placehold.it/306x554 306w" sizes="(max-width: 306px) 100vw, 306px" alt="" />
                                 <div class="portrait-video__body">
-                                  <h3 class="portrait-video__title" id="midd-video-label-269"> What do students do after graduation? </h3>
+                                  <h3 class="portrait-video__title" id="midd-video-label-940"> What do students do after graduation? </h3>
                                   <span class="button button--primary button--sm button--block mt-2"> Play <svg class="icon ml-1 " focusable="false" aria-hidden="true">
                                       <use xlink:href="#icon-play">
                                     </svg>
@@ -1100,12 +1100,12 @@
                                 </div>
                               </a>
                             </div>
-                            <div class="transcript js-transcript-269 mt-2">
-                              <a href="#midd-transcript-269" class="transcript__button" data-toggle-target=".js-transcript-269" aria-label="Toggle transcript" aria-expanded="false"> Transcript <svg class="transcript__icon icon icon--sm">
+                            <div class="transcript js-transcript-940 mt-2">
+                              <a href="#midd-transcript-940" class="transcript__button" data-toggle-target=".js-transcript-940" aria-label="Toggle transcript" aria-expanded="false"> Transcript <svg class="transcript__icon icon icon--sm">
                                   <use xlink:href="#icon-arrow-down" />
                                 </svg>
                               </a>
-                              <div class="transcript__body" id="midd-transcript-269">
+                              <div class="transcript__body" id="midd-transcript-940">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
@@ -1117,10 +1117,10 @@
                         <div class="col-sm-6 col-md-4 mb-5">
                           <figure class="portrait-video js-video" data-video='<iframe src="https://player.vimeo.com/video/398243397?autoplay=1" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay"></iframe>'>
                             <div class="portrait-video__content js-video-content">
-                              <a href="https://player.vimeo.com/video/398243397" class="js-video-link portrait-video__link" role="button" aria-label="Play video" aria-describedby="midd-video-label-19">
+                              <a href="https://player.vimeo.com/video/398243397" class="js-video-link portrait-video__link" role="button" aria-label="Play video" aria-describedby="midd-video-label-966">
                                 <img src="https://placehold.it/306x554" srcset="https://placehold.it/306x554 306w" sizes="(max-width: 306px) 100vw, 306px" alt="" />
                                 <div class="portrait-video__body">
-                                  <h3 class="portrait-video__title" id="midd-video-label-19"> What do students do after graduation? </h3>
+                                  <h3 class="portrait-video__title" id="midd-video-label-966"> What do students do after graduation? </h3>
                                   <span class="button button--primary button--sm button--block mt-2"> Play <svg class="icon ml-1 " focusable="false" aria-hidden="true">
                                       <use xlink:href="#icon-play">
                                     </svg>
@@ -1128,12 +1128,12 @@
                                 </div>
                               </a>
                             </div>
-                            <div class="transcript js-transcript-19 mt-2">
-                              <a href="#midd-transcript-19" class="transcript__button" data-toggle-target=".js-transcript-19" aria-label="Toggle transcript" aria-expanded="false"> Transcript <svg class="transcript__icon icon icon--sm">
+                            <div class="transcript js-transcript-966 mt-2">
+                              <a href="#midd-transcript-966" class="transcript__button" data-toggle-target=".js-transcript-966" aria-label="Toggle transcript" aria-expanded="false"> Transcript <svg class="transcript__icon icon icon--sm">
                                   <use xlink:href="#icon-arrow-down" />
                                 </svg>
                               </a>
-                              <div class="transcript__body" id="midd-transcript-19">
+                              <div class="transcript__body" id="midd-transcript-966">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
@@ -1145,10 +1145,10 @@
                         <div class="col-sm-6 col-md-4 mb-5">
                           <figure class="portrait-video js-video" data-video='<iframe src="https://player.vimeo.com/video/398243397?autoplay=1" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay"></iframe>'>
                             <div class="portrait-video__content js-video-content">
-                              <a href="https://player.vimeo.com/video/398243397" class="js-video-link portrait-video__link" role="button" aria-label="Play video" aria-describedby="midd-video-label-279">
+                              <a href="https://player.vimeo.com/video/398243397" class="js-video-link portrait-video__link" role="button" aria-label="Play video" aria-describedby="midd-video-label-442">
                                 <img src="https://placehold.it/306x554" srcset="https://placehold.it/306x554 306w" sizes="(max-width: 306px) 100vw, 306px" alt="" />
                                 <div class="portrait-video__body">
-                                  <h3 class="portrait-video__title" id="midd-video-label-279"> What do students do after graduation? </h3>
+                                  <h3 class="portrait-video__title" id="midd-video-label-442"> What do students do after graduation? </h3>
                                   <span class="button button--primary button--sm button--block mt-2"> Play <svg class="icon ml-1 " focusable="false" aria-hidden="true">
                                       <use xlink:href="#icon-play">
                                     </svg>
@@ -1156,12 +1156,12 @@
                                 </div>
                               </a>
                             </div>
-                            <div class="transcript js-transcript-279 mt-2">
-                              <a href="#midd-transcript-279" class="transcript__button" data-toggle-target=".js-transcript-279" aria-label="Toggle transcript" aria-expanded="false"> Transcript <svg class="transcript__icon icon icon--sm">
+                            <div class="transcript js-transcript-442 mt-2">
+                              <a href="#midd-transcript-442" class="transcript__button" data-toggle-target=".js-transcript-442" aria-label="Toggle transcript" aria-expanded="false"> Transcript <svg class="transcript__icon icon icon--sm">
                                   <use xlink:href="#icon-arrow-down" />
                                 </svg>
                               </a>
-                              <div class="transcript__body" id="midd-transcript-279">
+                              <div class="transcript__body" id="midd-transcript-442">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
@@ -1173,10 +1173,10 @@
                         <div class="col-sm-6 col-md-4 mb-5">
                           <figure class="portrait-video js-video" data-video='<iframe src="https://player.vimeo.com/video/398243397?autoplay=1" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay"></iframe>'>
                             <div class="portrait-video__content js-video-content">
-                              <a href="https://player.vimeo.com/video/398243397" class="js-video-link portrait-video__link" role="button" aria-label="Play video" aria-describedby="midd-video-label-906">
+                              <a href="https://player.vimeo.com/video/398243397" class="js-video-link portrait-video__link" role="button" aria-label="Play video" aria-describedby="midd-video-label-857">
                                 <img src="https://placehold.it/306x554" srcset="https://placehold.it/306x554 306w" sizes="(max-width: 306px) 100vw, 306px" alt="" />
                                 <div class="portrait-video__body">
-                                  <h3 class="portrait-video__title" id="midd-video-label-906"> What do students do after graduation? </h3>
+                                  <h3 class="portrait-video__title" id="midd-video-label-857"> What do students do after graduation? </h3>
                                   <span class="button button--primary button--sm button--block mt-2"> Play <svg class="icon ml-1 " focusable="false" aria-hidden="true">
                                       <use xlink:href="#icon-play">
                                     </svg>
@@ -1184,12 +1184,12 @@
                                 </div>
                               </a>
                             </div>
-                            <div class="transcript js-transcript-906 mt-2">
-                              <a href="#midd-transcript-906" class="transcript__button" data-toggle-target=".js-transcript-906" aria-label="Toggle transcript" aria-expanded="false"> Transcript <svg class="transcript__icon icon icon--sm">
+                            <div class="transcript js-transcript-857 mt-2">
+                              <a href="#midd-transcript-857" class="transcript__button" data-toggle-target=".js-transcript-857" aria-label="Toggle transcript" aria-expanded="false"> Transcript <svg class="transcript__icon icon icon--sm">
                                   <use xlink:href="#icon-arrow-down" />
                                 </svg>
                               </a>
-                              <div class="transcript__body" id="midd-transcript-906">
+                              <div class="transcript__body" id="midd-transcript-857">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
